--- a/lunchroulette/src/App.css
+++ b/lunchroulette/src/App.css
@@ -1,6 +1,33 @@
 
 .App {display: flex; justify-content: center;}
-.App .con-wrap {margin: 100px 0;}
+.App .con-wrap {margin: 50px 0 0;}
 .App .page-title {margin-bottom: 50px; font-size: 20px; text-align: center; font-weight: bold;}
-.App .btn-area {display: flex; justify-content: center; margin-top: 50px;}
-.App .btn-area .start-btn {margin-bottom: 50px; font-size: 20px; text-align: center; font-weight: bold;}
+
+
+.App .wheel-area {}
+.App .wheel-area .btn-area {display: flex; justify-content: center; margin-top: 50px;}
+.App .wheel-area .btn-area .start-btn {margin-bottom: 50px; font-size: 20px; text-align: center; font-weight: bold;}
+
+.main-con-area {display: flex;}
+
+.menu-history {margin-left: 100px;}
+.menu-history .title {font-weight: bold; font-size: 20px;}
+.menu-history ul li {list-style-type: none; margin-top: 10px;}
+.menu-history ul li:first-child {margin-top: 0;}
+.menu-history .empty-txt {color: #999; line-height: 2;}
+
+.user-input-area {display: flex; flex-direction: column; align-items: center; margin-bottom: 50px; padding: 20px; background-color: #efefef;}
+.user-input-area .input-box {display: flex;}
+.user-input-area .input-box .btn-add {margin-left: 5px; color: #fff; font-weight: bold; background-color: darkgreen; border: 0; letter-spacing: 1.5px;}
+.user-input-area .input-box input {padding: 0 10px; width: 500px; height: 30px; font-size: 14px;}
+
+
+/* 팝업 */
+.layer-popup {align-items: center; justify-content: center; position: fixed; left: 0; top:0; width:100%; height: 100%; z-index:200; background-color: rgba(0,0,0,0.5);}
+.layer-popup .for-center {display: flex; align-items: center; justify-content: center; width: 100%; height: 100%;}
+.layer-popup .for-center .pop-wrap {display: flex; align-items: center; justify-content: center; position:relative; width: 880px; max-width: 80vw; max-height: 80%; height: 100%; background-color: transparent;}
+.layer-popup .for-center .pop-wrap .pop-con-area {position: relative; display: flex; flex-direction: column; padding: 96px 120px; width: 100%; max-height: 100%; height: auto; background-color: #fff;}
+.layer-popup .for-center .pop-wrap .pop-con-area .todays-menu {display: inline-block; color: blue; font-weight: bold;}
+
+.layer-popup .pop-wrap .btn-close {position: absolute; right: 10px; top: 10px; display: block; margin: 0; padding: 0; width: 80px; height: 40px;}
+.layer-popup .pop-wrap .btn-close span {position:relative; display: flex; justify-content: center; align-items: center;  color: #06161E; font-size: 14px;}
